--- a/css/ogp_creation.css
+++ b/css/ogp_creation.css
@@ -13,6 +13,11 @@
           align-items: center;
 }
 
+.gray-box img{
+  /* width:100%; */
+  height:100%;
+}
+
 .gray-box p {
   text-align: center;
   font-size: 14px;
