--- a/css/component.css
+++ b/css/component.css
@@ -41,7 +41,7 @@
   text-align: center;
   text-decoration: none;
   color: #fff;
-  background: #00a6d9;
+  background: #31b2d5;
   border-radius: 30px;
 }
 
@@ -83,7 +83,8 @@ main .gray-box .top-logo {
 }
 
 main h2 {
-  font-size: 15px;
+  font-size: 16px;
+  line-height: 20px;
   font-weight: bold;
   color: #004c88;
 }
@@ -91,7 +92,7 @@ main h2 {
 main h1 {
   font-size: 19px;
   font-weight: bold;
-  color: #00a6d9;
+  color: #0099d9;
 }
 
 main .button-box {
@@ -105,90 +106,6 @@ main .button-box bottom {
 
 main .pw-text {
   margin-top: -10px;
-}
-
-.modal-wrapper {
-  z-index: 999;
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  padding: 40px 10px;
-  text-align: center;
-}
-
-.modal-wrapper:not(:target) {
-  opacity: 0;
-  visibility: hidden;
-  -webkit-transition: opacity 0.3s, visibility 0.3s;
-  transition: opacity 0.3s, visibility 0.3s;
-}
-
-.modal-wrapper:target {
-  opacity: 1;
-  visibility: visible;
-  -webkit-transition: opacity 0.4s, visibility 0.4s;
-  transition: opacity 0.4s, visibility 0.4s;
-}
-
-.modal-wrapper::after {
-  display: inline-block;
-  height: 100%;
-  margin-left: -0.05em;
-  vertical-align: middle;
-  content: "";
-}
-
-.modal-wrapper .modal-window {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  display: inline-block;
-  z-index: 20;
-  position: relative;
-  width: 70%;
-  max-width: 600px;
-  padding: 30px 30px 15px;
-  border-radius: 2px;
-  background: #fff;
-  -webkit-box-shadow: 0 0 30px rgba(0, 0, 0, 0.6);
-          box-shadow: 0 0 30px rgba(0, 0, 0, 0.6);
-  vertical-align: middle;
-}
-
-.modal-wrapper .modal-window .modal-content {
-  max-height: 80vh;
-  overflow-y: auto;
-  text-align: left;
-}
-
-.modal-overlay {
-  z-index: 10;
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background: rgba(0, 0, 0, 0.8);
-}
-
-.modal-wrapper .modal-close {
-  z-index: 20;
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 35px;
-  color: #95979c !important;
-  font-size: 20px;
-  font-weight: 700;
-  line-height: 35px;
-  text-align: center;
-  text-decoration: none;
-  text-indent: 0;
-}
-
-.modal-wrapper .modal-close:hover {
-  color: #2b2e38 !important;
 }
 
 body {
@@ -249,5 +166,22 @@ a {
   margin-bottom: 10px;
   border: 1px solid #6e6e6e;
   border-radius: 3px;
+}
+
+.form-box .form-syosai {
+  width: 100%;
+  height: 80px;
+  padding: 10px;
+  margin-bottom: 10px;
+  border: 1px solid #6e6e6e;
+  border-radius: 3px;
+}
+
+.center {
+  text-align: center;
+}
+
+.popup-title {
+  font-size: 17px;
 }
 /*# sourceMappingURL=component.css.map */
