--- a/css/component.scss
+++ b/css/component.scss
@@ -64,4 +64,23 @@ a {
     border: 1px solid #6e6e6e;
     border-radius: 3px;
   }
+  .form-syosai {
+    //formの飾り
+    width: 100%;
+    height: 80px;
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #6e6e6e;
+    border-radius: 3px;
+  }
+}
+
+// 一番下のセンター揃えボタン共通
+.center {
+  text-align: center;
+}
+
+// ポップアップ用共通
+.popup-title {
+  font-size: 17px;
 }
