--- a/css/ogp_creation.scss
+++ b/css/ogp_creation.scss
@@ -1,3 +1,7 @@
+body {
+  -webkit-appearance: none;
+}
+
 .gray-box {
   width: 100%;
   height: 193px;
@@ -6,6 +10,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+
   p {
     // 子を左右中央揃え
     text-align: center;
@@ -15,41 +20,31 @@
   }
 }
 
+ul {
+  list-style-type: none;
+
+  li {
+    display: flex;
+    align-items: center;
+    img {
+      width: 20px;
+      height: 20px;
+      margin-right: 10px;
+    }
+  }
+}
+
 p {
   font-size: 14px;
-}
-
-.icon-box1 {
-  width: 100%;
-  border: #e5e5e5 5px;
-  img {
-    width: 100%;
-    padding: 2px;
-  }
-}
-
-.icon-box2 {
-  width: 100%;
-  border: #e5e5e5 5px;
-  img {
-    width: 100%;
-    padding: 2px;
-  }
-}
-
-.icon-box3 {
-  width: 100%;
-  border: #e5e5e5 5px;
-  img {
-    width: 100%;
-    padding: 2px;
-  }
 }
 
 button {
   margin: 0 auto;
 }
 
-.center {
-  text-align: center;
+.checkbox-center {
+  max-width: 600px;
+  /* なぜか横幅と下2行を入れないとならず */
+  margin: 0 auto;
+  width: 100%;
 }
